objects/Rate_HCA__c.object
<CustomObject>
    <fields>
        <fullName>Add_l_Spend_Account_s_paired_w_product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add&apos;l Spend Account(s) paired w/ product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Provisions_HCA__c</fullName>
        <label>Additonal Provisions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_Group_Number_s__c</fullName>
        <description>used to track the applicable group numbers for a Rate HCA</description>
        <label>Applicable Group Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BlueEdge_Direct_HCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of Health Care Account</description>
        <inlineHelpText>For ASO HCA this excludes BCBSTX, BCBSMT</inlineHelpText>
        <label>BlueEdge Direct HCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlueEdge_FSAFirst__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of Health Care Account</description>
        <label>BlueEdge FSAFirst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlueEdge_HCA_PPO_Plan_A__c</fullName>
        <label>BlueEdge HCA (PPO) Plan A</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlueEdge_HCA_PPO_Plan_B__c</fullName>
        <label>BlueEdge HCA (PPO) Plan B</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlueEdge_HCA_PPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BlueEdge HCA (PPO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlueEdge_HCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of Healthcare Account</description>
        <label>BlueEdge HCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlueEdge_Limited_Purpose_HCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of Health Care Account</description>
        <label>BlueEdge Limited Purpose HCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlueEdge_Vitality_HCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of Health Care Account</description>
        <label>BlueEdge Vitality HCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlueEdge_Wellness_Rewards_HCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of Health Care Account</description>
        <label>BlueEdge Wellness Rewards HCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blue_Edge_HSA_Plus__c</fullName>
        <label>Blue Edge HSA Plus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blue_Edge_HSA_Standard_Plan_A__c</fullName>
        <label>Blue Edge HSA Standard Plan A</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Edge_HSA_Standard_Plan_B__c</fullName>
        <label>Blue Edge HSA Standard Plan B</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Edge_HSA_Standard__c</fullName>
        <label>Blue Edge HSA Standard</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_prior_to_carrier_credit__c</fullName>
        <label>Date prior to carrier credit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_1_HCA__c</fullName>
        <label>Employee + 1 Dependent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_1_Max__c</fullName>
        <label>Employee + 1 Dependent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_1_Only__c</fullName>
        <label>Employee + 1 Dependent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_2_HCA__c</fullName>
        <label>Employee + 2 or more depends</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_2_Max__c</fullName>
        <label>Employee + 2 or more depends</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_2_Only__c</fullName>
        <label>Employee + 2 or more depends</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_HCA__c</fullName>
        <label>Employee + Child(ren)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_Max__c</fullName>
        <label>Employee + Child(ren)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child_Only__c</fullName>
        <label>Employee + Child(ren)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_HCA__c</fullName>
        <label>Employee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Max__c</fullName>
        <label>Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Only__c</fullName>
        <label>Employee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_HCA__c</fullName>
        <label>Employee + Spouse</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_Max__c</fullName>
        <label>Employee + Spouse</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_Only__c</fullName>
        <label>Employee + Spouse</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_HCA_HRA_needing_ending_credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing HCA (HRA) needing ending credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_HCA__c</fullName>
        <label>Family</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Max__c</fullName>
        <label>Family</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Only__c</fullName>
        <label>Family</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Retention_Terms__c</fullName>
        <label>Full Retention Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Retention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funds_will_be_removed_on_Cancelation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funds will be removed on Cancelation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCA_Account_Structure__c</fullName>
        <description>Populates rates section of ASO HCA with the HCA Account Structure</description>
        <label>HCA Account Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee, Family</fullName>
                </value>
                <value>
                    <fullName>Employee, Employee + 1 Dependent, Employee + 2 or more Dependents</fullName>
                </value>
                <value>
                    <fullName>Employee, Employee + Spouse, Employee + Child(ren), Family</fullName>
                </value>
                <value>
                    <fullName>Employee, Employee + Spouse, Employee + Child(ren)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCA_Account_Yearly_Claim_Options__c</fullName>
        <label>HCA Account Yearly Claim Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple - recommended</fullName>
                </value>
                <value>
                    <fullName>Single - current funding/rollover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCA_Annual_Contribution_Frequency__c</fullName>
        <label>HCA Annual Contribution Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual (recommended)</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCA_Roll_Over_Amount__c</fullName>
        <label>HCA Roll Over Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100% (recommended)</fullName>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentives_applied_to_HCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentives applied to HCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Changed_Subscriber_HCA_Proration__c</fullName>
        <label>New/Changed Subscriber HCA Proration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 1</fullName>
                </value>
                <value>
                    <fullName>Priority 2</fullName>
                </value>
                <value>
                    <fullName>Priority 3</fullName>
                </value>
                <value>
                    <fullName>Priority 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Roll_over__c</fullName>
        <label>Other Roll over %</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_Period_15th_Day_thru_14th_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Period: 15th Day thru 14th Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Period_First_through_Last_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Period: First through Last Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Rate HCAs</relationshipLabel>
        <relationshipName>Rate_HCAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secure_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secure Information</label>
        <referenceTo>Secure_Information__c</referenceTo>
        <relationshipLabel>Rate HCAs</relationshipLabel>
        <relationshipName>Rate_HCAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rate HCA</label>
    <nameField>
        <label>Rate HCA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate HCAs</pluralLabel>
    <recordTypes>
        <fullName>Rate_HCA</fullName>
        <active>true</active>
        <label>Rate HCA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rate_HCA_MT</fullName>
        <active>true</active>
        <label>Rate HCA MT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rate_HCA_NM</fullName>
        <active>true</active>
        <label>Rate HCA NM</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>